--- a/room/room1.html
+++ b/room/room1.html
@@ -20,7 +20,7 @@
     <section class="image-gallery">
         <h2>Hình Ảnh Chi Tiết</h2>
         <div class="gallery">
-            <img src="image/41DTL/studio/main.jpg" alt="Ảnh 1" onclick="toggleFullScreen(this)">
+            <img src="https://github.com/tri3003A/rent/blob/79458869072dc32905671b4455dc229bc788e42e/image/41DTL/studio/main.jpg" alt="Ảnh 1" onclick="toggleFullScreen(this)">
             <img src="image/41DTL/studio/z6234084778143_8f3cacc3d266b5f4d49669b148690a3f.jpg" alt="Ảnh 2" onclick="toggleFullScreen(this)">
             <img src="image/41DTL/studio/z6234084789253_106c50a6593f1b954fcab02751bcc6cb.jpg" alt="Ảnh 3" onclick="toggleFullScreen(this)">
             <img src="image/41DTL/studio/z6234084794025_de421bad9d7f57bd27f3a2c99b95dfb9.jpg" alt="Ảnh 4" onclick="toggleFullScreen(this)">
