--- a/room/room1.html
+++ b/room/room1.html
@@ -67,7 +67,7 @@
     <script>
         // Điều hướng trang chủ
         function goToHome() {
-            window.location.href = "/index.html";
+            window.location.href = "index.html";
         }
 
         // Hiện ảnh toàn màn hình
