--- a/room/room2.html
+++ b/room/room2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi Tiết Căn Studio</title>
+    <title>Chi Tiết Căn Duplex</title>
     <link rel="stylesheet" href="room.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
     <section class="image-gallery">
         <h2>Hình Ảnh Chi Tiết</h2>
         <div class="gallery">
-            <img src="image/41DTL/studio cửa sổ trời/main.jpg" alt="Ảnh 1" onclick="toggleFullScreen(this)">
-            <img src="image/41DTL/studio cửa sổ trời/z6193240820151_c86eedd06cb16ad3596487c347651784.jpg" alt="Ảnh 2" onclick="toggleFullScreen(this)">
-            <img src="image/41DTL/studio cửa sổ trời/z6193240820152_f5aec25a7afaa5bd6cdf068ff3262dcf.jpg" alt="Ảnh 3" onclick="toggleFullScreen(this)">
-            <img src="image/41DTL/studio cửa sổ trời/z6193240820218_2f28450dd6220d4a8fbca74ba36733c0.jpg" alt="Ảnh 4" onclick="toggleFullScreen(this)">
+            <img src="../image/41DTL/studio cửa sổ trời/main.jpg" alt="Ảnh 1" onclick="toggleFullScreen(this)">
+            <img src="../image/41DTL/studio cửa sổ trời/z6193240820151_c86eedd06cb16ad3596487c347651784.jpg" alt="Ảnh 2" onclick="toggleFullScreen(this)">
+            <img src="../image/41DTL/studio cửa sổ trời/z6193240820152_f5aec25a7afaa5bd6cdf068ff3262dcf.jpg" alt="Ảnh 3" onclick="toggleFullScreen(this)">
+            <img src="../image/41DTL/studio cửa sổ trời/z6193240820218_2f28450dd6220d4a8fbca74ba36733c0.jpg" alt="Ảnh 4" onclick="toggleFullScreen(this)">
         </div>
     </section>
 
@@ -59,32 +59,73 @@
         <button onclick="goToHome()">⬅️ Quay Lại Trang Đầu</button>
     </section>
 
-    <!-- Overlay Toàn Màn Hình -->
+    <!-- Overlay Toàn Màn Hình
     <div id="fullscreen-overlay" onclick="toggleFullScreen()">
         <img id="fullscreen-image" src="" alt="Ảnh Toàn Màn Hình">
+    </div> -->
+    <div id="fullscreen-overlay">
+        <span class="nav-arrow left" onclick="prevImage()">⬅️</span>
+        <img id="fullscreen-image" src="" alt="Ảnh Toàn Màn Hình">
+        <span class="nav-arrow right" onclick="nextImage()">➡️</span>
+        <span class="close-btn" onclick="closeFullScreen()">✖️</span>
     </div>
-
+    
+    
     <script>
         // Điều hướng trang chủ
         function goToHome() {
-            window.location.href = "/index.html";
+            window.location.href = "https://tri3003a.github.io/rent/";
         }
 
+        // // Hiện ảnh toàn màn hình
+        // function toggleFullScreen(img) {
+        //     const overlay = document.getElementById('fullscreen-overlay');
+        //     const fullscreenImg = document.getElementById('fullscreen-image');
+
+        //     if (!overlay.classList.contains('active')) {
+        //         // Hiện ảnh toàn màn hình
+        //         fullscreenImg.src = img.src;
+        //         overlay.classList.add('active');
+        //     } else {
+        //         // Thoát khỏi chế độ toàn màn hình
+        //         overlay.classList.remove('active');
+        //         fullscreenImg.src = '';
+        //     }
+        // }
+        let currentImageIndex = 0; // Vị trí hiện tại của ảnh
+let images = []; // Danh sách các ảnh trong gallery
+
+function toggleFullScreen(img) {
+    const overlay = document.getElementById('fullscreen-overlay');
+    const fullscreenImg = document.getElementById('fullscreen-image');
+
+    if (!overlay.classList.contains('active')) {
         // Hiện ảnh toàn màn hình
-        function toggleFullScreen(img) {
-            const overlay = document.getElementById('fullscreen-overlay');
-            const fullscreenImg = document.getElementById('fullscreen-image');
+        overlay.classList.add('active');
+        images = Array.from(document.querySelectorAll('.gallery img')).map(i => i.src);
+        currentImageIndex = images.indexOf(img.src);
+        fullscreenImg.src = images[currentImageIndex];
+    } else {
+        // Thoát chế độ toàn màn hình
+        overlay.classList.remove('active');
+    }
+}
 
-            if (!overlay.classList.contains('active')) {
-                // Hiện ảnh toàn màn hình
-                fullscreenImg.src = img.src;
-                overlay.classList.add('active');
-            } else {
-                // Thoát khỏi chế độ toàn màn hình
-                overlay.classList.remove('active');
-                fullscreenImg.src = '';
-            }
-        }
+function nextImage() {
+    currentImageIndex = (currentImageIndex + 1) % images.length;
+    document.getElementById('fullscreen-image').src = images[currentImageIndex];
+}
+
+function prevImage() {
+    currentImageIndex = (currentImageIndex - 1 + images.length) % images.length;
+    document.getElementById('fullscreen-image').src = images[currentImageIndex];
+}
+function closeFullScreen() {
+    const overlay = document.getElementById('fullscreen-overlay');
+    overlay.classList.remove('active');
+}
+
+
     </script>
 </body>
 </html>
