--- a/room/room13.html
+++ b/room/room13.html
@@ -80,7 +80,7 @@
     <script>
         // Điều hướng trang chủ
         function goToHome() {
-            window.location.href = "https://tri3003a.github.io/rent/";
+            window.location.href = "../index.html";
         }
 
         // // Hiện ảnh toàn màn hình
